--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <canvas id="myCanvas"></canvas>
   <script src="priorityQueue.js"></script>
   <script src="math.js"></script>
+  <script src="hungarian.js"></script>
   <script src="utils.js"></script>
   <script src="polyanya.js"></script>
   <script src="graphics.js"></script>
