Move from Javascript to Typescript. Replace PriorityQueue with an npm-based one

--- a/index.html
+++ b/index.html
@@ -12,12 +12,6 @@
 </head>
 <body>
   <canvas id="myCanvas"></canvas>
-  <script src="priorityQueue.js"></script>
-  <script src="math.js"></script>
-  <script src="hungarian.js"></script>
-  <script src="utils.js"></script>
-  <script src="polyanya.js"></script>
-  <script src="graphics.js"></script>
-  <script src="main.js"></script>
+  <script src="dist/bundle.js"></script>
 </body>
 </html>
