--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
 <head>
   <title>Canvas Example</title>
   <style>
+    h2, p {
+      margin: 0px;
+      margin-top: 8px;
+      margin-left: 75px;
+    }
     canvas {
       margin: 50px;
+      margin-top: 25px;
       border: 1px solid black;
       image-rendering: pixelated;
     }
   </style>
 </head>
 <body>
+  <h2>Pathfinding</h2>
+  <p>WASD to pan. N/M to zoom. V for debug.</p>
   <canvas id="myCanvas"></canvas>
   <script src="dist/bundle.js"></script>
 </body>
